FCell: fixed alignment problems.

--- a/packages/ketchup/src/f-components/f-cell/f-cell.scss
+++ b/packages/ketchup/src/f-components/f-cell/f-cell.scss
@@ -234,8 +234,8 @@
   }
 
   .f-cell__content {
+    align-items: center;
     display: flex;
-    line-height: normal;
     width: 100%;
   }
 
